@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gnubg.c,v 1.574 2004/07/19 07:55:56 thyssen Exp $
+ * $Id: gnubg.c,v 1.575 2004/07/25 20:46:41 kaoru Exp $
  */
 
 #include "config.h"
@@ -8858,12 +8858,12 @@ dirname (char *path)
 
 extern char *
 Convert ( const char *sz, 
-          const char *szDestCharset, const char *szSourceCharset ) {
-
+          const char *szDestCharset, const char *szSourceCharset )
+{
 #if HAVE_ICONV
-
   iconv_t id;
-  int lIn, lOut, l, rc, nUsed;
+  size_t lIn, lOut, l, rc;
+  int nUsed;
 #if WIN32
   const char *pchIn;
 #else
@@ -8897,7 +8897,7 @@ Convert ( const char *sz,
     rc = iconv ( id, (ICONV_CONST char **) &pchIn, &lIn, &pchOut, &l );
 #endif
 
-    if ( rc == -1 ) 
+    if ( rc == (size_t)(-1) ) 
       switch ( errno ) {
       case EINVAL:
         /* incomplete text, do not report an error */
